--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 ---
-name: CI workflows
+name: CI/CD
 on:
   push:
     branches:
@@ -14,7 +14,6 @@ on:
         type: choice
         options:
           - lint-and-scan
-          - format
           - upgrade
         description: Choose the workflow to run
         default: lint-and-scan
@@ -28,15 +27,6 @@ jobs:
       || github.event_name == 'pull_request'
       || (github.event_name == 'workflow_dispatch' && inputs.workflow == 'lint-and-scan')
     uses: dceoy/gh-actions-for-devops/.github/workflows/terraform-lint-and-scan.yml@main
-    with:
-      search-path: .
-      terraform-version: latest
-      terragrunt-version: latest
-  terraform-format:
-    if: >
-      github.event_name == 'pull_request'
-      || (github.event_name == 'workflow_dispatch' && inputs.workflow == 'format')
-    uses: dceoy/gh-actions-for-devops/.github/workflows/terraform-format-and-pr.yml@main
     with:
       search-path: .
       terraform-version: latest
