--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
       interval: daily
     open-pull-requests-limit: 10
   - package-ecosystem: terraform
-    directory: /modules/kms/
+    directory: /modules/codebuild/
     schedule:
       interval: daily
     open-pull-requests-limit: 10
